# MarketTrendPredictor

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
libs/: CMakeLists.txt
logs/: logs.txt
scripts/: build.sh  configure.sh  run.sh
